Add class for json and fixed ObjectiveCard.json